[gd_scene load_steps=5 format=3 uid="uid://bqqk76lwks3od"]

[ext_resource type="Script" path="res://levels/level_1.gd" id="1_sryg2"]
[ext_resource type="PackedScene" uid="uid://r275w3l6osq3" path="res://components/ui/button_scene.tscn" id="2_wilh6"]
[ext_resource type="PackedScene" uid="uid://cng8yewksr3xk" path="res://components/unit/base_unit/base_unit.tscn" id="3_pumsr"]
[ext_resource type="PackedScene" uid="uid://cph6t58p7p6np" path="res://components/ui/border_full.tscn" id="3_sce7j"]

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sryg2")

[node name="PreviousButtonScene" parent="." instance=ExtResource("2_wilh6")]
layout_mode = 1
offset_right = 62.0
offset_bottom = 31.0
text = "Back to Main menu"

[node name="Instruction" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -375.5
offset_right = 375.5
offset_bottom = 26.0
grow_horizontal = 2
text = "With limited resource to spawn Colies, find the best spawning strategy to get rid all the outsiders."

[node name="Stats" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_top = 50.0
offset_right = 40.0
offset_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="Stats"]
layout_mode = 1
offset_left = 10.0
offset_right = 86.0
offset_bottom = 40.0

[node name="ResourceUI" type="Control" parent="Stats/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Stats/HBoxContainer/ResourceUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResourceName" type="Label" parent="Stats/HBoxContainer/ResourceUI/HBoxContainer"]
layout_mode = 2
text = "Resource:"

[node name="ResourceValue" type="Label" parent="Stats/HBoxContainer/ResourceUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="BorderFull" parent="." instance=ExtResource("3_sce7j")]

[node name="Worlds" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Units" type="Node2D" parent="Worlds"]
unique_name_in_owner = true

[node name="Enemy1" parent="Worlds/Units" instance=ExtResource("3_pumsr")]
position = Vector2(892, 254)
team = 2
body_color = Color(0.968627, 0.47451, 0.458824, 1)

[node name="Enemy2" parent="Worlds/Units" instance=ExtResource("3_pumsr")]
position = Vector2(883, 537)
team = 2
body_color = Color(0.8, 0.427451, 1, 1)

[node name="SpawnMarker1" type="Marker2D" parent="Worlds"]
unique_name_in_owner = true
position = Vector2(987, 230)

[node name="SpawnMarker2" type="Marker2D" parent="Worlds"]
unique_name_in_owner = true
position = Vector2(958, 533)
